New in v1.3.4 (????/??/??)
---------------------------

Don't print "Fatal Error" if --check-destination-dir completed successfully.
Thanks to Serge Zub for the suggestion. (Andrew Ferguson)

Allow --test-server option to be combined with --restrict. Thanks to Nick
Moffitt for reporting the error. Closes Ubuntu bug  #349072. (Andrew Ferguson)


New in v1.3.3 (2009/03/16)
---------------------------

Improve handling of incorrect permissions on backup repository during restore
operation. Closes Ubuntu bug #329722. (Andrew Ferguson)

Don't crash on zlib errors. Closes Debian bug #518531. (Andrew Ferguson)

Make sticky bit warnings quieter while determining file system abilities.
Closes Savannah bug #25788. (Andrew Ferguson)

Fix situation where destination file cannot be opened because of an access
error. Thanks to Dean Cording for the bug report. (Andrew Ferguson)

Fix --compare-hash options on Windows. Thanks to Serge Zub for the fix.


New in v1.3.2 (2009/03/02)
---------------------------

Don't crash when filesystem can't set ACL. Thanks to Matt Thompson for the bug
report. (Andrew Ferguson)

Fix Security Error when performing non-backup operations on Windows. Thanks to
Tommy Keene for the bug report. (Andrew Ferguson)

Properly disable hardlinks by default on Windows.

Fix Python 2.2 compatibility. Closes Savannah bug #25529. (Andrew Ferguson)

Fix typo which caused failure when checking if another rdiff-backup process is
running on Windows. Thanks to Ryan Hughes for the bug report. (Andrew Ferguson)

Disable hardlinks by default on Windows when performing operations such as
--compare, etc. Thanks to Ryan Hughes for the bug report. (Andrew Ferguson)

Change --min-file-size and --max-file-size to agree with man page. These
options no longer include files, and will only apply to regular files. Thanks
to Johannes Jensen for the suggestion. (Andrew Ferguson)

Improve error message if regress operation fails due to Security Violation.